force-app/main/default/objects/BMCServiceDesk__ScanConfigurationProtocol__c/BMCServiceDesk__ScanConfigurationProtocol__c.object-meta.xml
<CustomObject>
    <description>Stores the protocols configured for each scan configuration.</description>
    <label>Scan Configuration Protocol</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Configuration Protocols</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>