force-app/main/default/objects/BMCServiceDesk__ScanConfigurationProtocol__c/fields/BMCServiceDesk__IsActive__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if the protocol is active for the scan configuration or not.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>