force-app/main/default/objects/BMCServiceDesk__ScanConfigurationProtocol__c/fields/BMCServiceDesk__ProtocolLabel__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ProtocolLabel__c</fullName>
    <formula>CASE( BMCServiceDesk__ProtocolName__c,&apos;SMB&apos;, $Label.bmcservicedesk__smbprotocol , &apos;SSH&apos;, $Label.bmcservicedesk__sshprotocol, &apos;SNMP&apos;,$Label.bmcservicedesk__snmpprotocol, &apos;VMWARE&apos;, $Label.bmcservicedesk__vmwareprotocol, &apos;HYPERV&apos;, $Label.bmcservicedesk__hypervprotocol,$Label.bmcservicedesk__psatnotapplicable)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Protocol Label</label>
    <type>Text</type>
</CustomField>