force-app/main/default/objects/BMCServiceDesk__ScanConfigurationProtocol__c/fields/BMCServiceDesk__ProtocolName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ProtocolName__c</fullName>
    <description>To store the name of the protocol.</description>
    <label>Protocol Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>